
plugins {
    id "org.sonarqube" version "2.6.1"
    id "io.codearte.nexus-staging" version "0.11.0"
    id "com.github.spotbugs" version "1.6.9"
    id "org.xbib.gradle.plugin.asciidoctor" version "1.6.0.1"
}

printf "Host: %s\nOS: %s %s %s\nJVM: %s %s %s %s\nGradle: %s Groovy: %s Java: %s\n" +
        "Build: group: ${project.group} name: ${project.name} version: ${project.version}\n",
        InetAddress.getLocalHost(),
        System.getProperty("os.name"),
        System.getProperty("os.arch"),
        System.getProperty("os.version"),
        System.getProperty("java.version"),
        System.getProperty("java.vm.version"),
        System.getProperty("java.vm.vendor"),
        System.getProperty("java.vm.name"),
        gradle.gradleVersion, 
        GroovySystem.getVersion(), 
        JavaVersion.current()

if (JavaVersion.current() < JavaVersion.VERSION_11) {
    throw new GradleException("This build must be run with java 11 or higher")
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'signing'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'pmd'
    apply plugin: 'checkstyle'
    apply plugin: 'org.xbib.gradle.plugin.asciidoctor'

    configurations {
        asciidoclet
        wagon
    }

    dependencies {
        testCompile "junit:junit:${project.property('junit.version')}"
        testCompile "org.apache.logging.log4j:log4j-core:${project.property('log4j.version')}"
        testCompile "org.apache.logging.log4j:log4j-slf4j-impl:${project.property('log4j.version')}"
        asciidoclet "org.xbib:asciidoclet:${project.property('asciidoclet.version')}"
        wagon "org.apache.maven.wagon:wagon-ssh:${project.property('wagon.version')}"
    }

    compileJava {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }
    compileTestJava {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << "-Xlint:all"
        if (!options.compilerArgs.contains("-processor")) {
            options.compilerArgs << '-proc:none'
        }
    }

    test {
        jvmArgs =[
                '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
                '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED',
                '--add-opens=java.base/java.nio=ALL-UNNAMED'
        ]
        systemProperty 'jna.debug_load', 'true'
        testLogging {
            showStandardStreams = true
            exceptionFormat = 'full'
        }
    }
    
    clean {
        delete "data"
        delete "logs"
        delete "out"
    }
    
    /*javadoc {
        options.docletpath = configurations.asciidoclet.files.asType(List)
        options.doclet = 'org.xbib.asciidoclet.Asciidoclet'
        options.overview = "src/docs/asciidoclet/overview.adoc"
        options.addStringOption "-base-dir", "${projectDir}"
        options.addStringOption "-attribute",
                "name=${project.name},version=${project.version},title-link=https://github.com/jprante/${project.name}"
        configure(options) {
            noTimestamp = true
        }
    }*/

    task javadocJar(type: Jar, dependsOn: javadoc) {
        classifier 'javadoc'
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        from sourceSets.main.allSource
        classifier 'sources'
    }

    artifacts {
        archives javadocJar, sourcesJar
    }
    
    if (project.hasProperty('signing.keyId')) {
        signing {
            sign configurations.archives
        }
    }

    apply from: "${rootProject.projectDir}/gradle/publish.gradle"

    spotbugs {
        effort = "max"
        reportLevel = "low"
        //includeFilter = file("findbugs-exclude.xml")
    }

    tasks.withType(com.github.spotbugs.SpotBugsTask) {
        ignoreFailures = true
        reports {
            xml.enabled = false
            html.enabled = true
        }
    }

    tasks.withType(Pmd) {
        ignoreFailures = true
        reports {
            xml.enabled = true
            html.enabled = true
        }
    }
    tasks.withType(Checkstyle) {
        ignoreFailures = true
        reports {
            xml.enabled = true
            html.enabled = true
        }
    }

    pmd {
        toolVersion = '6.11.0'
        ruleSets = ['category/java/bestpractices.xml']
    }

    checkstyle {
        configFile = rootProject.file('config/checkstyle/checkstyle.xml')
        ignoreFailures = true
        showViolations = true
    }

    sonarqube {
        properties {
            property "sonar.projectName", "${project.group} ${project.name}"
            property "sonar.sourceEncoding", "UTF-8"
            property "sonar.tests", "src/test/java"
            property "sonar.scm.provider", "git"
            property "sonar.junit.reportsPath", "build/test-results/test/"
        }
    }
}

/*asciidoctor {
    attributes toc: 'left',
            doctype: 'book',
            icons: 'font',
            encoding: 'utf-8',
            sectlink: true,
            sectanchors: true,
            linkattrs: true,
            imagesdir: 'img',
            'source-highlighter': 'coderay'
}*/

/*
task aggregatedJavadoc(type: Javadoc) {
    group = 'aggregation'
    description = 'Generates aggregated Javadoc API documentation.'
    title = "$description $version API"
    destinationDir = file("$buildDir/docs/javadoc")
    def sourceProjects = subprojects.findAll {
        it.plugins.hasPlugin('java') || it.plugins.hasPlugin('groovy')
    }
    source sourceProjects.collect {
        it.sourceSets.main.allJava
    }
    classpath = files(sourceProjects.collect {
        it.sourceSets.main.runtimeClasspath
    })
    //options.overview = 'gradle/api/overview.html'
    options.showFromProtected()
}
*/
